fix: improve responsiveness on narrow screens

--- a/Mini Project/Weather-App/style.css
+++ b/Mini Project/Weather-App/style.css
@@ -110,7 +110,7 @@ body{
 
     .search input{
     color: #555;
-    padding: 10px 10px;
+    padding: 10px 30px;
     margin-right: 5px;
     font-size: 16px;
     height: 50px;
